Home: Private Club

--- a/sass/_configs.scss
+++ b/sass/_configs.scss
@@ -10,19 +10,21 @@
 
 // Typography
 
-$text-size: 15px;
+$text-size: 13px;
 $color-text-regular: #292929;
+$color-text-light: #888888;
 
 
 // Color
 
-$color-accent-primary: #03afff;
+$color-accent-primary: #00004d;
+$color-accent-secondary: #d2bc8f;
 $color-background: #fafafa;
 
 
 // UI
 
-$ui-border-color: #ececec;
+$ui-border-color: #dadada;
 $ui-border-width: 1px;
 
 
@@ -34,44 +36,44 @@ $h1-font: 'Bodoni',
 serif;
 $h1-spacing: 0;
 $h1-transform: none;
-$h1-lineheight: 1;
+$h1-lineheight: 1.5;
 
 $h2-size: 2rem;
-$h2-weight: 600;
+$h2-weight: normal;
 $h2-font: 'Bodoni',
 serif;
 $h2-spacing: 0;
 $h2-transform: none;
-$h2-lineheight: 1;
+$h2-lineheight: 1.5;
 
 $h3-size: 1.5rem;
-$h3-weight: 600;
+$h3-weight: normal;
 $h3-font: 'Bodoni',
 serif;
 $h3-spacing: 0;
 $h3-transform: none;
-$h3-lineheight: 1;
+$h3-lineheight: 1.5;
 
 $h4-size: 1.25rem;
-$h4-weight: 600;
+$h4-weight: normal;
 $h4-font: 'Bodoni',
 serif;
 $h4-spacing: 0;
 $h4-transform: none;
-$h4-lineheight: 1;
+$h4-lineheight: 1.5;
 
-$h5-size: .75rem;
-$h5-weight: 800;
+$h5-size: .85rem;
+$h5-weight: bold;
 $h5-font: 'Montserrat',
 sans-serif;
 $h5-spacing: 0;
 $h5-transform: uppercase;
-$h5-lineheight: 1;
+$h5-lineheight: 1.5;
 
-$h6-size: .75rem;
-$h6-weight: 800;
+$h6-size: .85rem;
+$h6-weight: bold;
 $h6-font: 'Montserrat',
 sans-serif;
 $h6-spacing: 0;
 $h6-transform: uppercase;
-$h6-lineheight: 1;
+$h6-lineheight: 1.5;
