--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -37,7 +37,6 @@ h1 {
     font-family: $h1-font;
     text-transform: $h1-transform;
     line-height: $h1-lineheight;
-    -webkit-text-stroke-width: 0.2px;
 }
 
 h2 {
@@ -81,4 +80,33 @@ h6 {
     font-family: $h6-font;
     text-transform: $h6-transform;
     line-height: $h6-lineheight;
+}
+
+
+
+
+
+h5 {
+    &.title {
+        text-align: center;
+        letter-spacing: .2em;
+
+        -webkit-text-stroke-width: 0;
+
+        &:after {
+            content: '';
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            width: 5rem;
+            height: .35rem;
+
+            @include ui-border;
+            border-left: 0;
+            border-right: 0;
+
+            margin: 1.5rem auto;
+        }
+    }
 }
