--- a/style.scss
+++ b/style.scss
@@ -17,9 +17,16 @@
 @import "sass/mixin/normalize";
 @import "sass/mixin/breakpoint";
 
+// Addons
+
+@import url("addons/jquery.modal.css"); // Addons: jQuery Modal
+@import url("addons/fontawesome/all.css"); // Addons: FontAwesome
+@import url("addons/bootstrap-grid.css"); // Addons: Bootstrap 4 Grid
+
 // Stylesheets
 
 @import "sass/basics"; // Core: Basics
+@import "sass/ui"; // Core: UI
 
 @import "sass/typography"; // Core: Basics
 
