--- a/sass/_basics.scss
+++ b/sass/_basics.scss
@@ -12,11 +12,11 @@
 
 @font-face {
     font-family: 'Bodoni';
-    src: url('bodoni.eot?#iefix') format('embedded-opentype'),
-        url('bodoni.woff2') format('woff2'),
-        url('bodoni.woff') format('woff'),
-        url('bodoni.ttf') format('truetype'),
-        url('bodoni.svg#LTC Bodoni 175 W01 Regular') format('svg');
+    src: url('./addons/bodoni/bodoni.eot?#iefix') format('embedded-opentype'),
+        url('./addons/bodoni/bodoni.woff2') format('woff2'),
+        url('./addons/bodoni/bodoni.woff') format('woff'),
+        url('./addons/bodoni/bodoni.ttf') format('truetype'),
+        url('./addons/bodoni/bodoni.svg#LTC Bodoni 175 W01 Regular') format('svg');
 }
 
 html {
@@ -26,6 +26,7 @@ html {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    -webkit-text-stroke-width: 0.2px;
 }
 
 body {
@@ -65,16 +66,4 @@ a {
     text-decoration: none;
 
     transition: all .25s;
-
-    &:hover {
-        color: $color-accent-primary;
-    }
-}
-
-.container-fluid {
-    padding: 0 5vw;
-}
-
-@mixin ui-shadow {
-    box-shadow: 0 1px 4px rgba($color-text-regular, .125);
 }
