--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,8 +1,36 @@
+#footer {
+    padding: 5rem 0;
+}
+
 .footer--outer {
+    position: relative;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    &:after {
+        content: '';
+
+        position: absolute;
+        top: -4rem;
+
+        display: block;
+
+        height: 8rem;
+        width: 8rem;
+
+        background-image: url('./img/winston-thomas-key-logo.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+
+        filter: grayscale(1);
+        opacity: .125;
+
+        z-index: -1;
+    }
 }
 
 .footer--menu {
@@ -19,12 +47,32 @@
 
 .footer--menu-item {
     text-transform: uppercase;
-    font-size: .75rem;
+    font-size: .85rem;
     font-weight: bold;
 
     margin: .5rem 1rem;
 }
 
+.footer--social {
+    list-style: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin: 3rem 0;
+    padding: 0;
+}
+
+.footer--social-item {
+    margin: 0 .5rem;
+}
+
 .footer--copyright {
-    font-size: .75rem;
+    opacity: .5;
+    margin: 1rem 0 0;
+
+    @include breakpoint(md) {
+        margin: 0;
+    }
 }
