--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@
 // Addons
 
 @import url("addons/jquery.modal.css"); // Addons: jQuery Modal
+@import url("addons/jquery.flickity.css"); // Addons: jQuery Modal
 @import url("addons/fontawesome/all.css"); // Addons: FontAwesome
 @import url("addons/bootstrap-grid.css"); // Addons: Bootstrap 4 Grid
 
