--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -47,6 +47,7 @@
     * {
         margin: 0;
         line-height: 1;
+        white-space: nowrap;
     }
 
     // h1 {
@@ -56,7 +57,7 @@
     h6 {
         margin-top: .5rem;
 
-        font-size: .5rem;
+        font-size: .85rem;
 
         transition: all .25s;
     }
