--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
   *  `em` units.
   */
 @import url("addons/jquery.modal.css");
+@import url("addons/jquery.flickity.css");
 @import url("addons/fontawesome/all.css");
 @import url("addons/bootstrap-grid.css");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap&subset=vietnamese");
@@ -472,6 +473,11 @@ section {
   position: relative;
 }
 
+section:not(#header) {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 section + section {
   margin-top: 1rem;
 }
@@ -512,7 +518,7 @@ section + section {
   padding: 0 1rem;
 }
 
-@media (max-width: 767px) {
+@media (min-width: 992px) {
   .container-fluid {
     padding: 0 5vw;
   }
@@ -556,6 +562,53 @@ input::placeholder {
   background-color: #dadada;
 }
 
+.section-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+}
+
+.section-title h5 {
+  margin: 0;
+}
+
+@media (min-width: 992px) {
+  .section-title.left {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    text-align: left;
+  }
+  .section-title.left.divider {
+    margin-left: 0;
+  }
+}
+
+.section-title.gold h1,
+.section-title.gold h2,
+.section-title.gold h3,
+.section-title.gold h4,
+.section-title.gold h5,
+.section-title.gold h6 {
+  color: #d2bc8f;
+}
+
+.section-title.gold .divider {
+  border-color: #d2bc8f;
+  opacity: .5;
+}
+
 .divider {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -576,6 +629,11 @@ input::placeholder {
 
 .divider.small {
   width: 3.5rem;
+}
+
+.divider.gold {
+  border-color: #d2bc8f;
+  opacity: .25;
 }
 
 * + h1,
@@ -674,7 +732,6 @@ h6 {
 h5.title {
   text-align: center;
   letter-spacing: .2em;
-  -webkit-text-stroke-width: 0;
 }
 
 h5.title:after {
@@ -758,11 +815,12 @@ h5.title:after {
 .header--logo * {
   margin: 0;
   line-height: 1;
+  white-space: nowrap;
 }
 
 .header--logo h6 {
   margin-top: .5rem;
-  font-size: .5rem;
+  font-size: .85rem;
   -webkit-transition: all .25s;
   transition: all .25s;
 }
@@ -1033,8 +1091,81 @@ h5.title:after {
   display: block;
   width: 100%;
   height: 100vh;
-  max-height: 60rem;
-  background-color: #dadada;
+  padding: 0 !important;
+}
+
+.hero--carousel .flickity-page-dots {
+  max-width: 18rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  left: 0;
+  right: 0;
+  bottom: -1.5rem;
+  margin: 0 auto;
+}
+
+.hero--carousel .flickity-button {
+  z-index: 5;
+}
+
+.hero--carousel .dot {
+  display: inline-block;
+  width: 5rem;
+  height: .2rem;
+  margin: 0;
+  background: #292929;
+  border-radius: 0;
+  opacity: 0.25;
+  cursor: pointer;
+}
+
+.hero--carousel-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: white;
+  background: rgba(0, 0, 0, 0.25);
+}
+
+.hero--carousel-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+}
+
+.hero--carousel-item img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 #intro {
@@ -1100,12 +1231,12 @@ h5.title:after {
   width: 100%;
   color: white;
   background: #292929;
-  padding: 2.5rem 0 0;
+  padding-bottom: 0 !important;
 }
 
 @media (min-width: 992px) {
   #private-club {
-    padding: 0;
+    padding-bottom: 5rem !important;
     background: -webkit-gradient(linear, left top, right top, from(#292929), color-stop(90%, #292929), color-stop(90%, rgba(41, 41, 41, 0)), to(rgba(41, 41, 41, 0)));
     background: linear-gradient(to right, #292929 0%, #292929 90%, rgba(41, 41, 41, 0) 90%, rgba(41, 41, 41, 0) 100%);
   }
@@ -1134,7 +1265,7 @@ h5.title:after {
 
 @media (min-width: 992px) {
   .private-club--left {
-    padding: 5vw;
+    padding: 0 5vw;
   }
 }
 
@@ -1147,7 +1278,7 @@ h5.title:after {
 }
 
 .private-club--left .content-bottom {
-  margin-top: 2.5rem;
+  margin-top: 3rem;
 }
 
 .private-club--left .content-bottom h5 {
@@ -1183,7 +1314,7 @@ h5.title:after {
 
 @media (min-width: 992px) {
   .private-club--right {
-    padding: 5vw 0;
+    padding: 0;
   }
 }
 
@@ -1208,6 +1339,10 @@ h5.title:after {
   margin-top: .5rem;
 }
 
+#enquiry .container a:hover {
+  color: #d2bc8f;
+}
+
 #mailling-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1226,7 +1361,7 @@ h5.title:after {
   border-right: 0;
   border-left: 0;
   margin-bottom: 3rem;
-  padding: 2rem;
+  padding: 2rem 0 !important;
 }
 
 @media (min-width: 992px) {
