--- a/sass/_ui.scss
+++ b/sass/_ui.scss
@@ -87,12 +87,12 @@ input {
     @include ui-border;
     border-left: 0;
     border-right: 0;
-
-    margin: 1.5rem auto;
 }
 
 .divider {
     @include ui-title-underline;
+
+    margin: 1.5rem auto 3rem;
 
     &.small {
         width: 3.5rem;
